# vtf2md

./: LICENSE  README.md  pyproject.toml  run.sh  variables.tf
tests/: variables.tf  variables_2.tf
vtf2md/: main.py
