[tool.poetry]
name = "vtf2md"
version = "0.1.0"
description = ""
authors = ["Yaseen Younus <yay200@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-hcl2 = "^5.0.0"
pytablewriter = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
